[package]
name = "ejdb"
version = "0.3.1"
authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]
description = "Bindings for EJDB, and embedded JSON database"
repository = "https://github.com/netvl/ejdb.rs"
documentation = "https://netvl.github.io/ejdb.rs/"
readme = "Readme.md"
keywords = ["ejdb", "database", "json", "bson", "ffi"]
license = "MIT"

[lib]
name = "ejdb"

[dependencies]
ejdb-sys = { path = "ejdb-sys", version = "0.2" }
bson = "0.11"
bitflags = "1.0"
quick-error = "1.2"
libc = "0.2"
itertools = "0.7"

[dev-dependencies]
tempdir = "0.3"
