[package]
name = "ejdb-bson"
version = "0.1.0"
authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]
description = "Bindings for EJDB BSON library"
repository = "https://github.com/netvl/ejdb.rs"
documentation = "https://netvl.github.io/ejdb.rs/"
readme = "Readme.md"
keywords = ["ejdb", "bson", "database", "ffi"]
license = "MIT"

[dependencies]
libc = "0.1"
ejdb-sys = { path = "../ejdb-sys", version = "0.1" }
