[package]
name = "ejdb-sys"
version = "0.2.0"
authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]
repository = "https://github.com/netvl/ejdb.rs"
description = "Native bindings for libejdb"
keywords = ["ejdb", "database", "ffi"]
license = "MIT"
links = "ejdb"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
libc = "0.2"
